--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>Full Stack Developer</h2>
                 <p>As a developer, I specialize in front-end and backend technlogies with extensive experience in developing
                     end-to-end product with a holistic understadning of Technology stack. Passionate about learning new technologies
-                    and spreading my knowledge across various programming languages. I love, long distance cycling and running Marathon.</p>
+                    and spreading my knowledge across various programming languages. I enjoy long distance cycling and running Marathon.</p>
                            </div>
         </div>   
     </header>
