added link for projects & and one drop down project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
     <!-- // Intro -->
@@ -19,6 +20,14 @@
             <a href="#work">Work Experience</a>
             <a href="#education">Education</a>
             <a href="#technologies">Technologies</a>
+            <div class="dropdown">
+                <a>Projects</a>
+                <div class="dropdown-content">
+                  <a href="https://cmshiyas.github.io/bouncingballs/" target="_blank">Bouncing Balls</a>
+                  <!-- <a href="#">Link 2</a> -->
+                  <!-- <a href="#">Link 3</a> -->
+                </div>
+            </div>
             <a href="#contact" >Contact</a>
             <a href="http://blog.cmshiyas.com" target="_blank">Blog</a>
         </nav>
