added git icon to the site

--- a/index.html
+++ b/index.html
@@ -335,6 +335,8 @@
                     <span class="sr-only">LinkedIn</span></a>
                 <a href="https://www.facebook.com/cmshiyas" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>
                     <span class="sr-only">facebook</span></a>
+                    <a href="https://github.com/cmshiyas" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
+                        <span class="sr-only">github</span></a>
             </div>
 
             <p>Copyright 2017 by Shiyas Cholamukhath</p>
